<?xml version="1.0"?>
<package>
  <name>awesomo</name>
  <version>0.0.0</version>
  <description>awesomo library package</description>

  <!-- contact info -->
  <maintainer email="chutsu@gmail.com">Chris Choi</maintainer>
  <maintainer email="stan.j.brown@gmail.com">Stan Brown</maintainer>

  <!-- build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- license -->
  <license>LGPLv3</license>
</package>
