<?xml version="1.0"?>
<package>
  <name>awesomo_configs</name>
  <version>0.0.0</version>
  <description>awesomo configs package</description>

  <!-- contact info -->
  <maintainer email="chutsu@gmail.com">Chris Choi</maintainer>
  <maintainer email="stan.j.brown@gmail.com">Stan Brown</maintainer>

  <!-- build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- license -->
  <license>LGPLv3</license>
</package>
