<?xml version="1.0"?>
<package>
  <name>awesomo_ros</name>
  <version>0.0.0</version>
  <description>The awesomo package</description>

  <!-- contact info -->
  <maintainer email="chutsu@gmail.com">Chris Choi</maintainer>
  <maintainer email="stan.j.brown@gmail.com">Stan Brown</maintainer>

  <!-- build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>awesomo_core</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>awesomo_core</run_depend>

  <!-- license -->
  <license>LGPLv3</license>
</package>
